--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                 <div class="social-icons">
                     <a href="https://www.facebook.com/sanjil.shahi.71"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="https://www.linkedin.com/in/sanjil-shahi-08440b263/"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href=""><i class="fa-brands fa-github"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></i></a>
+                    <a href="https://github.com/Sanjiil"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.instagram.com/sanjilshahi/"><i class="fa-brands fa-instagram"></i></i></a>
                 </div>
                 <a href="images/CV_SANJIL_SHAHI.pdf" download class="btn btn2">Download CV</a>
             </div>
