--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Sanjil's Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/fa6dd79b50.js" crossorigin="anonymous"></script>
 </head>
@@ -24,7 +24,7 @@
         </nav>
         <div class="header-text">
             <p>Quality Assurance</p>
-            <h1> Hi, I'm <span>Sanjil Shahi</span><br> From Nepal</h1>
+            <h1> Hi, I'm <span>Sanjil Shahi.</span><br></h1>
         </div>
     </div>
 </div>
@@ -37,9 +37,7 @@
             </div>
             <div class="about-col-2">
             <h1 class="sub-title"> About Me</h1>
-            <p>My name is Sanjil Shahi jkahdsknbcjdsabguilf ;io; HWFEUH;L IKHE OIl kherjfhklHL HFKJD hehklhkfj dfkj
-               oueiugfhjkdjl;kOPIHRWJKBEFnlm;;leopjriwknem
-               ]efhoij;eklnjbfwhoijpk;lewknjqrhwioejpk;lrkwjhiofjepk;l krjwhebqknlofihwebjkn</p>
+            <p>My name is Sanjil Shahi</p>
                <div class="tab-titles">
                 <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                 <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -49,8 +47,8 @@
                <div class="tab-contents active-tab" id="skills">
                     <ul>
                          <li><span>QA</span><br>Quality Assurance</li>
-                         <li><span>QA</span><br>Quality Assurance</li>
-                         <li><span>QA</span><br>Quality Assurance</li>
+                         <li><span>Html/CSS</span><br>Front-end design</li>
+                         <li><span>UI/UX</span><br>UI/UX designs</li>
                     </ul>
                </div>
             <!--------------------------------- Experience ----------------------------------->
@@ -63,9 +61,9 @@
                <!---------------------------- Education ------------------------------------>
                <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>2024</span><br>BICT from Virinchi International College, Minbhaban</li>
-                        <li><span>2020</span><br>+2 Science from Banepa Nist, Banepa</li>
-                        <li><span>2018</span><br>SEE from Rambhakta Memorial School, Banepa</li>
+                        <li><span>2023</span><br>BICT from Virinchi International College, Minbhaban</li>
+                        <li><span>2018</span><br>+2 Science from Banepa Nist, Banepa</li>
+                        <li><span>2016</span><br>SEE from Rambhakta Memorial School, Banepa</li>
                     </ul>
                </div>
             </div>
@@ -81,7 +79,7 @@
             <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Functional Testing</h2>
-                <p>twfydguahskjhvgcfqdwtydiu sohjkdbvhqgcwdfytiousjklnbvegwf ytsuyoiujkldnjbqvwg ygsjiklnb</p>
+                <p>Complete Functional Testing of website</p>
                 <a href="#">Learn more</a>
             
             </div>
@@ -89,13 +87,13 @@
             <div>
                 <i class="fa-brands fa-codepen"></i>
                 <h2>User Acceptance Testing</h2>
-                <p>twfydguahskjhvgcfqdwtydiuso hjkdbvhqgcwdfytiousjklnbvegwf ytsuyoiujkldnjbqvwg ygsjiklnb</p>
+                <p>User Acceptance Testing of software products</p>
                 <a href="#">Learn more</a>
                         </div>
             <div>
                 <i class="fa-brands fa-quinscape"></i>
                 <h2>Api Testing </h2>
-                <p>twfydguahskjhvgcfqdwtydiuso hjkdbvhqgcwdfytiousjklnbvegwf ytsuyoiujkldnjbqvwg ygsjiklnb</p>
+                <p>Api Testing of software during development</p>
                 <a href="#">Learn more</a>
             </div>
         </div>
