Changing photos and others

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="about-col-2">
             <h1 class="sub-title"> About Me</h1>
-            <p>My name is Sanjil Shahi</p>
+            <p> I'm Sanjil Shahi, a passionate QA Engineer with a strong focus on delivering high-quality software. With experience at Ojas Digital, Axios Softwork, and Rumsan. My goal is to ensure every product I work on is reliable and user-friendly. Let's connect to discuss how I can help your team achieve excellence!</p>
                <div class="tab-titles">
                 <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                 <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -46,22 +46,23 @@
                <!----------------------------- Skills ----------------------------------------->
                <div class="tab-contents active-tab" id="skills">
                     <ul>
-                         <li><span>QA</span><br>Quality Assurance</li>
-                         <li><span>Html/CSS</span><br>Front-end design</li>
-                         <li><span>UI/UX</span><br>UI/UX designs</li>
+                         <li><span>Manual Testing</span><br>User Acceptance Testing</li>
+                         <li><span>API Testing</span><br>API Functional Testing</li>
+                         <li><span>Performace Testing </span><br>Performance Testing, Stress Testing, Load Testing</li>
                     </ul>
                </div>
             <!--------------------------------- Experience ----------------------------------->
                <div class="tab-contents" id="experience">
                     <ul>
-                        <li><span>Jan 2024- Present</span><br>Junior Quality Assurance at Ojas Digital</li>
-                        <li><span>Sep 2023- Dec 2023</span><br>Quality Assurance Intern</li>
+                        <li><span>Jun 2024- Present</span><br>Mid Level Quality Assurance <br> (Ojas Digital Marketing and Production House)</li>
+                        <li><span>Jan 2024- Jun 2024</span><br>Junior Quality Assurance <br> (Ojas Digital Marketing and Production House)</li>
+                        <li><span>Sep 2023- Dec 2023</span><br>Quality Assurance Intern <br> (Axios Softwork)</li>
                     </ul>
                </div>
                <!---------------------------- Education ------------------------------------>
                <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>2023</span><br>BICT from Virinchi International College, Minbhaban</li>
+                        <li><span>2023</span><br>BICT from Virinchi International College, Lalitpur</li>
                         <li><span>2018</span><br>+2 Science from Banepa Nist, Banepa</li>
                         <li><span>2016</span><br>SEE from Rambhakta Memorial School, Banepa</li>
                     </ul>
@@ -78,22 +79,22 @@
          <div class="services-list">
             <div>
                 <i class="fa-solid fa-code"></i>
-                <h2>Functional Testing</h2>
-                <p>Complete Functional Testing of website</p>
+                <h2>API Functional Testing</h2>
+                <p>API Functional Testing using Postman</p>
                 <a href="#">Learn more</a>
             
             </div>
 
             <div>
                 <i class="fa-brands fa-codepen"></i>
-                <h2>User Acceptance Testing</h2>
-                <p>User Acceptance Testing of software products</p>
+                <h2>UAT </h2>
+                <p>User Acceptance Testing of Software Products</p>
                 <a href="#">Learn more</a>
                         </div>
             <div>
                 <i class="fa-brands fa-quinscape"></i>
-                <h2>Api Testing </h2>
-                <p>Api Testing of software during development</p>
+                <h2>Performace Testing </h2>
+                <p>Performace of Software Product</p>
                 <a href="#">Learn more</a>
             </div>
         </div>
@@ -141,7 +142,7 @@
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
                 <p><i class="fa-solid fa-paper-plane"></i> shahisanjil@gmail.com</p>
-                <p><i class="fa-solid fa-mobile-screen-button"></i> 9860654416, 9841109290</p>
+                <p><i class="fa-solid fa-mobile-screen-button"></i> +977 9860654416/ +977 9841109290</p>
                 <div class="social-icons">
                     <a href="https://www.facebook.com/sanjil.shahi.71"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="https://www.linkedin.com/in/sanjil-shahi-08440b263/"><i class="fa-brands fa-linkedin"></i></a>
@@ -162,7 +163,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright <i class="fa-regular fa-copyright"></i> Sanjil.</p>
+        <p><i class="fa-regular fa-copyright"></i> 2024 Sanjil Shahi - All Rights Reserved.</p>
     </div>
 </div>
 
