--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
     <script src="https://kit.fontawesome.com/fa6dd79b50.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <nav>
+        <img src="images/logo.png" class="logo">
+            <ul id="sidemenu">
+                <li><a href="/">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./services.html">Services</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+                <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
+            </ul>
+            <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+    </nav>
 <div id="header">
     <div class="container">
-        <nav>
-            <img src="images/logo.png" class="logo">
-                <ul id="sidemenu">
-                    <li><a href="#header">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
-                </ul>
-                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
-        </nav>
+  
         <div class="header-text">
             <p>Quality Assurance</p>
             <h1> Hi, I'm <span>Sanjil Shahi.</span><br></h1>
