feat: footer year

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <img src="images/logo.png" class="logo">
+        <img src="images/logo.png" href="/" class="logo">
             <ul id="sidemenu">
                 <li><a href="/">Home</a></li>
                 <li><a href="./about.html">About</a></li>
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p><i class="fa-regular fa-copyright"></i> 2024 Sanjil Shahi - All Rights Reserved.</p>
+            <p><i class="fa-regular fa-copyright"></i> 2025 Sanjil Shahi - All Rights Reserved.</p>
         </div>
     </div>
 </body>
