--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <img src="images/logo.png" class="logo">
+        <img src="images/logo.png" href="/" class="logo">
             <ul id="sidemenu">
                 <li><a href="/">Home</a></li>
                 <li><a href="./about.html">About</a></li>
